Commit by mahesh

--- a/index.html
+++ b/index.html
@@ -99,9 +99,6 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
-                                            <li id="emergeId"><a href="emergency_services.html">Emergency Service </a>
-                                            </li>
-                                             
 
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
@@ -115,25 +112,6 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-<<<<<<< HEAD
-                                        <ul><!-- #### LogIn FormatMenu START #### -->
-                                            <li id="Username" class='invisible'></li>
-                                            <li id="Photo" class='invisible'>
-                                                <img alt="Profile" height="35px" width='35px' id="dpPhoto">
-                                            </li>
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login &nbsp;&nbsp;</a>
-                                            </li>
-                                            <li id="guidelogin">
-                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                                    Guide &nbsp;Login &nbsp;
-                                                </a>
-                                            </li>
-                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                                <a id="btnLogout">Logout</a>
-                                            </li>
-                                            <input type="hidden" id="hdnUserType">
-                                            <!-- #### LogIn FormatMenu STOP #### -->
-=======
 
                                     <!-- #### LogIn FormatMenu START #### -->
                                     <li id="Username" class='invisible'></li>
@@ -156,7 +134,6 @@
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
                                             <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
->>>>>>> 5afc5693006afdd938c57236dd3b5e23f0161437
                                         </ul>
                                     </div>
                                 </div>
@@ -190,9 +167,7 @@
                                     minlength="10" placeholder='Mobile Number (+91)'></input>
                             </div>
                             <div class="col-sm-12 col-md-2 col-lg-2">
-                                <div id='captchaContainer'>
-
-                                </div>
+                                <div id='captchaContainer'></div>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <button id="btnSendOTP" class='btn btn-primary' type='button'>
