--- a/travel_destination.html
+++ b/travel_destination.html
@@ -67,7 +67,6 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="emergency_services.html">Emergency Service</a></li>
                                             <input type="hidden" id="hdnUserType">
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
@@ -91,7 +90,7 @@
                                        <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                    </li>
                                    <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                           onclick="login()">Login &nbsp;</a></li>
+                                           onclick="login()">Login</a></li>
                                    <li id="guidelogin" class='invisible'>
                                        <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
                                            Guide Login
