--- a/GuideDetails.html
+++ b/GuideDetails.html
@@ -58,7 +58,26 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="about.html">About</a></li>                                
+                                            <li><a class="active" href>home</a></li>
+                                            <li><a href="about.html">About</a></li>
+
+                                            <!-- #### LogIn FormatMenu START #### -->
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                                    onclick="login()">Login</a></li>
+                                            <li id="guidelogin" class='invisible'>
+                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                                    Guide Login
+                                                </a>
+                                            </li>
+                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                                <a id="btnLogout">Logout</a>
+                                            </li>
+                                            <input type="hidden" id="hdnUserType">
+                                            <li id="Username" class='invisible'></li>
+                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
+                                                    alt="" id="dpPhoto" draggable="false"></li>
+                                            <!-- #### LogIn FormatMenu STOP #### -->
+
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
@@ -66,29 +85,13 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>                                             
+                                            </li>
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                     <!-- #### LogIn FormatMenu START #### -->
-                                     <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                        onclick="login()">Login</a></li>
-                                <li id="guidelogin" class='invisible'>
-                                    <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                        Guide Login
-                                    </a>
-                                </li>
-                                <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                    <a id="btnLogout">Logout</a>
-                                </li>
-                                <input type="hidden" id="hdnUserType">
-                                <li id="Username" class='invisible'></li>
-                                <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
-                                        alt="" id="dpPhoto" draggable="false"></li>
-                                <!-- #### LogIn FormatMenu STOP #### -->
 
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
@@ -208,12 +211,12 @@
                                             alt></noscript>
                                 </a>
                             </div>
-                            <p>2, Sai Charan, <br> India <br>
-                                <a href="#">917854632810</a> <br>
+                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
+                                <a href="#">+10 367 826 2567</a> <br>
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="53303c3d273230271330322123363d2736217d303c3e">[email&#160;protected]</span></a>
                             </p>
-                            <!-- <div class="socail_links">
+                            <div class="socail_links">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -241,7 +244,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
@@ -250,7 +253,10 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About</a></li>                               
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#"> Gallery</a></li>
+                                <li><a href="#"> Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -395,6 +401,7 @@
             }
         });
     </script>
+    <!-- #### COPY THIS SCRIPTS START #### -->
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
@@ -423,6 +430,7 @@
     </style>
     <script src="js/indexMain.js"></script>
 
+    <!-- #### COPY THIS SCRIPTS END #### -->
 </body>
 
 </html>
