--- a/elements.html
+++ b/elements.html
@@ -56,7 +56,8 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>                                                
+                                            <li><a href="index.html">home</a></li>    
+                                            <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
