Changes by Nandu

--- a/destination_details.html
+++ b/destination_details.html
@@ -58,8 +58,8 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>                                                
-                                            <li><a href="about.html">About</a></li>                                           
+                                            <li><a href="index.html">home</a></li>
+                                            <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
@@ -67,7 +67,7 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>                                                                                       
+                                            </li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -79,8 +79,8 @@
                                     <li id="Photo" class='invisible'>
                                         <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                     </li>
-                                    <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                            onclick="login()">Login</a></li>
+                                    <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login</a>
+                                    </li>
                                     <li id="guidelogin" class='invisible'>
                                         <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
                                             Guide Login
@@ -523,6 +523,7 @@
 
         gtag('config', 'UA-23581568-13');
     </script>
+    
 </body>
 
 </html>
