--- a/travel_destination.html
+++ b/travel_destination.html
@@ -59,7 +59,7 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="about.html">About</a></li>  
+                                            <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
@@ -77,32 +77,32 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li> -->                                                                                    
+                                            </li> -->
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                   <!-- #### LogIn FormatMenu START #### -->
-                                   <li id="Username" class='invisible'></li>
-                                   <li id="Photo" class='invisible'>
-                                       <img alt="Profile" height="35px" width='35px' id="dpPhoto">
-                                   </li>
-                                   <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                           onclick="login()">Login</a></li>
-                                   <li id="guidelogin" class='invisible'>
-                                       <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                           Guide Login
-                                       </a>
-                                   </li>
-                                   <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                       <a id="btnLogout">Logout</a>
-                                   </li>
-                                   <!-- #### LogIn FormatMenu STOP #### -->
+                                    <!-- #### LogIn FormatMenu START #### -->
+                                    <li id="Username" class='invisible'></li>
+                                    <li id="Photo" class='invisible'>
+                                        <img alt="Profile" height="35px" width='35px' id="dpPhoto">
+                                    </li>
+                                    <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login</a>
+                                    </li>
+                                    <li id="guidelogin" class='invisible'>
+                                        <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                            Guide Login
+                                        </a>
+                                    </li>
+                                    <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                        <a id="btnLogout">Logout</a>
+                                    </li>
+                                    <!-- #### LogIn FormatMenu STOP #### -->
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>                                           
+                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -129,7 +129,7 @@
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
                         <h3>Destinations</h3>
-                        
+
                     </div>
                 </div>
             </div>
@@ -563,8 +563,8 @@
                             <h3 class="footer_title">
                                 Company
                             </h3>
-                            <ul class="links">                                
-                                <li><a href="#">About</a></li>                                
+                            <ul class="links">
+                                <li><a href="#">About</a></li>
                             </ul>
                         </div>
                     </div>
@@ -745,7 +745,7 @@
         }
     </style>
     <script src="js/indexMain.js"></script>
-
+    <script src='js/Destination.js'></script>
 </body>
 
 </html>
