--- a/travel_destination.html
+++ b/travel_destination.html
@@ -137,7 +137,7 @@
     </div>
 
 
-    <div class="where_togo_area">
+    <!-- <div class="where_togo_area">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-3">
@@ -169,12 +169,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="popular_places_area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <!-- <div class="col-lg-4">
                     <div class="filter_result_wrap">
                         <h3>Filter Result</h3>
                         <div class="filter_bordered">
@@ -208,7 +208,7 @@
                                                     style="border:0; color:#7A838B; font-weight:400;">
                                             </p>
                                         </div>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                             <div class="reset_btn">
@@ -216,7 +216,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
+                <div class="col-lg-2">&nbsp;</div>
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
@@ -400,14 +401,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-lg-12">
                             <div class="more_place_btn text-center">
                                 <a class="boxed-btn4" href="#">More Places</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
+                <div class="col-lg-2">&nbsp;</div>
             </div>
         </div>
     </div>
