--- a/destination_details.html
+++ b/destination_details.html
@@ -25,6 +25,25 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
+    <!-- SweetAlert 2 Files -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+
+    <style>
+        .invisible {
+            display: none !important;
+            visibility: hidden !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -62,34 +81,33 @@
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="destination_details.html">Destinations details</a></li>
-                                                    <li><a href="elements.html">elements</a></li>
-                                                </ul>
+                                            <!-- #### LogIn FormatMenu START #### -->
+                                            <li id="Username" class='invisible'></li>
+                                            <li id="Photo" class='invisible'>
+                                                <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                             </li>
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                                    onclick="login()">Login
+                                                    &nbsp;&nbsp;</a>
+                                            </li>
+                                            <li id="guidelogin" class='invisible'>
+                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                                    Guide&nbsp;Login &nbsp;
+                                                </a>
+                                            </li>
+                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                                <a id="btnLogout">Logout</a>
+                                            </li>
+                                            <input type="hidden" id="hdnUserType">
+                                            <!-- #### LogIn FormatMenu STOP #### -->
+
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <!-- #### LogIn FormatMenu START #### -->
-                                    <li id="Username" class='invisible'></li>
-                                    <li id="Photo" class='invisible'>
-                                        <img alt="Profile" height="35px" width='35px' id="dpPhoto">
-                                    </li>
-                                    <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login</a>
-                                    </li>
-                                    <li id="guidelogin" class='invisible'>
-                                        <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                            Guide Login
-                                        </a>
-                                    </li>
-                                    <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                        <a id="btnLogout">Logout</a>
-                                    </li>
-                                    <!-- #### LogIn FormatMenu STOP #### -->
+
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
                                             <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
@@ -523,7 +541,15 @@
 
         gtag('config', 'UA-23581568-13');
     </script>
-    
+    <style>
+        .invisible {
+            display: none !important;
+            visibility: hidden !important;
+        }
+    </style>
+    <script src="js/Destination.js"></script>
+    <script src="js/travelDetails.js"></script>
+    <script src='js/indexMain.js'></script>
 </body>
 
 </html>
