Final Changes Done By nandu

--- a/destination_details.html
+++ b/destination_details.html
@@ -150,7 +150,7 @@
                             some form, by injected humour, or randomised words which don't look even slightly
                             believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there
                             isn't anything embarrassing.</p>
-                        <div class="single_destination">
+                        <!-- <div class="single_destination">
                             <h4>Day-01</h4>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have
                                 suffered alteration in some form, by injected humour, or randomised words.</p>
@@ -164,10 +164,28 @@
                             <h4>Day-03</h4>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have
                                 suffered alteration in some form, by injected humour, or randomised words.</p>
+                        </div> -->
+                        <div class="single_destination text-center">
+                            <a id='aTagYatra' target="_blank" rel="noopener">
+                                <img src="img/Yatra.png" class="detaiedIMAGE genric-btn success circle" alt=""
+                                    draggable="false">
+                            </a>
+                        </div>
+                        <div class="single_destination text-center">
+                            <a id='aTagTrivago' target="_blank" rel="noopener">
+                                <img src="img/trivago.png" class="detaiedIMAGE genric-btn success circle" alt=""
+                                    draggable="false">
+                            </a>
+                        </div>
+                        <div class="single_destination text-center">
+                            <a id='aTagOyo' target="_blank" rel="noopener">
+                                <img src="img/oyo.png" class="detaiedIMAGE genric-btn success circle" alt=""
+                                    draggable="false">
+                            </a>
                         </div>
                     </div>
                     <div class="bordered_1px"></div>
-                    <div class="contact_join">
+                    <!-- <div class="contact_join">
                         <h3>Contact for join</h3>
                         <form action="#">
                             <div class="row">
@@ -193,7 +211,7 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -545,6 +563,12 @@
         .invisible {
             display: none !important;
             visibility: hidden !important;
+        }
+
+        .detaiedIMAGE {
+            padding: 15px;
+            margin: 15px height: 100px;
+            width: 45%;
         }
     </style>
     <script src="js/Destination.js"></script>
