--- a/about.html
+++ b/about.html
@@ -68,24 +68,7 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
-                                            <input type="hidden" id="hdnUserType">
-                                            <li id="Username" class='invisible'></li>
-                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
-                                                    alt="" id="dpPhoto" draggable="false"></li>
-                                            
-                                            <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="destination_details.html">Destinations details</a></li>
-                                                    <li><a href="elements.html">elements</a></li>
-                                                </ul>
-                                            </li> -->
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                            <div class="col-xl-4 col-lg-4 d-none d-lg-block">
-                                <div class="social_wrap d-flex align-items-center justify-content-end">
-                                     <!-- #### LogIn FormatMenu START #### -->
+                                              <!-- #### LogIn FormatMenu START #### -->
                                      <li id="Username" class='invisible'></li>
                                      <li id="Photo" class='invisible'>
                                          <img alt="Profile" height="35px" width='35px' id="dpPhoto">
@@ -100,6 +83,39 @@
                                      <li id="liLogout" class='invisible' style='cursor:pointer'>
                                          <a id="btnLogout">Logout</a>
                                      </li>
+                                     <!-- #### LogIn FormatMenu STOP #### -->
+                                            <!-- <input type="hidden" id="hdnUserType">
+                                            <li id="Username" class='invisible'></li>
+                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
+                                                    alt="" id="dpPhoto" draggable="false"></li>
+                                             -->
+                                            <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                                <ul class="submenu">
+                                                    <li><a href="destination_details.html">Destinations details</a></li>
+                                                    <li><a href="elements.html">elements</a></li>
+                                                </ul>
+                                            </li> -->
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-4 d-none d-lg-block">
+                                <div class="social_wrap d-flex align-items-center justify-content-end">
+                                     <!-- #### LogIn FormatMenu START #### -->
+                                     <!-- <li id="Username" class='invisible'></li>
+                                     <li id="Photo" class='invisible'>
+                                         <img alt="Profile" height="35px" width='35px' id="dpPhoto">
+                                     </li>
+                                     <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                             onclick="login()">Login</a></li>
+                                     <li id="guidelogin" class='invisible'>
+                                         <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                             GuideLogin
+                                         </a>
+                                     </li>
+                                     <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                         <a id="btnLogout">Logout</a>
+                                     </li> -->
                                      <!-- #### LogIn FormatMenu STOP #### -->
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
