--- a/destination_details.html
+++ b/destination_details.html
@@ -251,7 +251,7 @@
         </div>
     </div>
 
-    <div class="popular_places_area">
+    <!-- <div class="popular_places_area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -350,7 +350,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
