--- a/uploadLocation.html
+++ b/uploadLocation.html
@@ -151,7 +151,7 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li> -->                                                                                      
+                                            </li> -->
                                         </ul>
                                     </nav>
                                 </div>
@@ -417,7 +417,7 @@
         (function ($) {
             $(window).on('load', function () {
                 $.instagramFeed({
-                    'tag': 'tripguide',
+                    'username': 'touristguide2021',
                     'container': "#instagram_feed2",
                     'display_profile': false,
                     'display_biography': false,
